--- a/webapp/main.html
+++ b/webapp/main.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8"/> 
-		<link rel="stylesheet" href="../css/bootstrap.min.css" ></link>
+		<link rel="stylesheet" href="boostrap/css/bootstrap.min.css" ></link>
 		<!-- jQuery library -->
 		<script src="boostrap/js/jquery-2.2.0.min.js"></script>
 		<!-- Latest compiled JavaScript -->
