--- a/webapp/groupList.html
+++ b/webapp/groupList.html
@@ -1,20 +1,20 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<link rel="stylesheet" href="../css/bootstrap.min.css"></link>
+<link rel="stylesheet" href="boostrap/css/bootstrap.min.css"></link>
 <!-- jQuery library -->
-<script src="/boostrap/js/jquery-2.2.0.min.js"></script>
+<script src="boostrap/js/jquery-2.2.0.min.js"></script>
 <!-- Latest compiled JavaScript -->
-<script src="/boostrap/js/bootstrap.min.js"></script>
+<script src="boostrap/js/bootstrap.min.js"></script>
 
 <link type="text/css"
-	href="/boostrap/css/custom-theme/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
+	href="boostrap/css/custom-theme/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
 <!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">-->
-<link type="text/css" href="/boostrap/assets/css/font-awesome.min.css"
+<link type="text/css" href="boostrap/assets/css/font-awesome.min.css"
 	rel="stylesheet" />
 
 <link type="text/css" href="common.css" rel="stylesheet" />
-<script src="/group.js"></script>
+<script src="group.js"></script>
 <!--[if IE 7]>
             <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css">
             <![endif]-->
