--- a/webapp/queryCf.html
+++ b/webapp/queryCf.html
@@ -29,6 +29,14 @@
 
 <!-- for date-picker
 		-->
+<style type="text/css">
+   .mask{margin:0;padding:0;border:none;width:100%;height:100%;background:#333;opacity:0.6;filter:alpha(opacity=60);z-index:9999;position:fixed;top:0;left:0;display:none;}
+#modal{position:absolute;left:20%;top:30%;width:30%;height:40%;border:1%;border-radius:1%;z-index:10000;display:none;}
+
+#addbtn{text-decoration:none;padding:2% 15%;margin-left:7%;margin-top:10%;border-radius:1%;opacity:0.8;filter:alpha(opacity=80);}
+#close{text-decoration:none;padding:2% 15%;margin-left:53%;margin-top:-10.8%;border-radius:1%;opacity:0.8;filter:alpha(opacity=80);}
+
+    </style>
 
 </head>
 
@@ -73,6 +81,7 @@
 								  <label><input name="Status" type="radio" value="" checked="true" />全部</label>
 								  </div>
 								  <button class="btn btn-primary btn-lg"  onclick="queryCfResult()">查询</button>
+								  <a href="#" id="addpunishment">增加罚题</a>
 								</div>
 							</div>
 						</div>
@@ -100,9 +109,70 @@
 			<div class="panel-body">
 				<div id="resultList"></div>
 			</div>
-		</div>
+	</div>
+	<div class="panel panel-primary" id="modal">
+		<div class="panel-heading" >罚题录入</div>
+		<div class="panel-body">
+		<div class="modal-bg">
+			
 	
+			<select id="filterUser2" class="form-control" onchange="selected()">
+				<option value="Could">Could</option>
+				<option value="DFS">DFS</option>
+			</select>
+			</br>
+			<select id="problemNoType" class="form-control" onchange="selected()">
+				<option value="P">普通罚题</option>
+				<option value="H">高级罚题</option>
+				<option value="B">装逼作死罚题</option>
+			</select>
+			</br>
+			
+			<button class="btn btn-primary btn-lg" id="addbtn" onclick="addCfProblem()">确定</button>
+			<button class="btn btn-primary btn-lg" id="close">取消</button>
+			
+		</div>
+		</div>
+	</div>
 
+  	<script type="text/javascript">
+	$(function ($) {
+		//弹出
+		$("#addpunishment").hover(function () {
+			$(this).stop().animate({
+				opacity: '1'
+			}, 600);
+		}, function () {
+			$(this).stop().animate({
+				opacity: '0.6'
+			}, 1000);
+		}).on('click', function () {
+			$("body").append("<div id='mask'></div>");
+			$("#mask").addClass("mask").fadeIn("slow");
+			$("#modal").fadeIn("slow");
+		});
+		//
+		//按钮的透明度
+		$("#addbtn").hover(function () {
+			$(this).stop().animate({
+				opacity: '1'
+			}, 600);
+		}, function () {
+			$(this).stop().animate({
+				opacity: '0.8'
+			}, 1000);
+		}).on('click', function () {
+			$("#modal").fadeOut("fast");
+			$("#mask").css({ display: 'none' });
+		});
+		
+		//关闭
+		$("#close").hover(function () { $(this).css({ color: 'black' }) }, function () { $(this).css({ color: '#999' }) }).on('click', function () {
+			$("#modal").fadeOut("fast");
+			$("#mask").css({ display: 'none' });
+		});
+	});
+	</script>	
 </body>
 
 
