--- a/webapp/queryCf.html
+++ b/webapp/queryCf.html
@@ -74,7 +74,7 @@
 								  <label><input name="Status" type="radio" value="" checked="true" />全部</label>
 								  </div>
 								  <button class="btn btn-primary btn-lg"  onclick="queryCfResult()">查询</button>
-								  <a href="#" id="addpunishment">增加罚题</a>
+								  <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">增加罚题</button>
 								</div>
 							</div>
 						</div>
@@ -126,8 +126,12 @@
 						<option value="B">装逼作死罚题</option>
 					</select>
 					<br />
-					<lable>罚题数：</lable><intput id="problemNum"  type="text"></intput>
-       			</div>	
+					<lable>罚题数：</lable>
+					<textarea  id="problemNum"  class="form-control"  type="text" ></textarea>
+					<br />
+					<lable>到期日：</lable>
+					<textarea  id="deadlineT"  class="form-control"  type="text" ></textarea>
+       			</div>
 				<div class="modal-footer"> 
             		<button type="button" class="btn btn-primary" onclick="addCfProblem()">确定</button>
 					<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>			
