--- a/webapp/queryCf.html
+++ b/webapp/queryCf.html
@@ -6,7 +6,7 @@
 <script src="boostrap/js/jquery-2.2.0.min.js"></script>
 <!-- Latest compiled JavaScript -->
 <script src="boostrap/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script> -->
 <script src="boostrap/js/bootstrap-modal.js"></script>
 <link type="text/css"
 	href="boostrap/css/custom-theme/jquery-ui-1.10.0.custom.css"
